# rust-web-app

./: Cargo.toml
migrations/2021-09-19-023025_create_posts/: up.sql
migrations/2021-10-04-134052_create_posts/: down.sql  up.sql
migrations/comment/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/domain/: posts_repository.rs
src/domain/model/: tree.rs
src/domain/repository/: comments_repository.rs  mod.rs  posts_repository.rs
src/domain/service/: mod.rs  posts_service.rs  tree_service.rs
src/infrastructure/repository/: comments_repository_impl.rs  mod.rs  posts_repository_impl.rs
src/repository/: posts_repository_impl.rs
