[package]
name = "rust_web_app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = { version = "1.4.4", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
mockall = "0.10.2"
parameterized = "0.3.1"
env_logger = "0.9.0"